--- a/coding_room/linked_list/Makefile
+++ b/coding_room/linked_list/Makefile
@@ -1,2 +1,2 @@
 sll:
-	g++ -std=c++17 sll.h sll.cpp && ./a.out && rm ./a.out
+	g++ -std=c++17 sll.h sll.cpp && ./a.out && rm ./a.out && rm ./sll.h.gch
