--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -83,6 +83,11 @@
     "string_view": "cpp",
     "initializer_list": "cpp",
     "span": "cpp",
-    "regex": "cpp"
+    "regex": "cpp",
+    "ostream": "cpp",
+    "bitset": "cpp",
+    "memory": "cpp",
+    "system_error": "cpp",
+    "typeindex": "cpp"
   }
 }
