--- a/mid-term_exam/Makefile
+++ b/mid-term_exam/Makefile
@@ -1,2 +1,4 @@
 run:
-	g++ -std=c++17 e1.cpp && ./a.out && rm ./a.out 
+	g++ -std=c++17 e1.cpp && ./a.out && rm ./a.out
+heap:
+	g++ -std=c++17 heap.cpp && ./a.out && rm ./a.out
